[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bill Crupi <crupib@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.90.0"
unicorn = {extras = ["standard"], version = "^2.0.1.post1"}
python-dotenv = "^0.21.1"
tweepy = "^4.12.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.12.0"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
